--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top transparent" id="home-nav">
       <div class="container">
         <a class="navbar-brand" href="#">SAAV</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -22,10 +22,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#home">Home</a>
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#our_products">Our Products</a>
+              <a class="nav-link" href="products.html">Our Products</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#about_us">About Us</a>
@@ -167,6 +167,35 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
       integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
     </script>
+
+    <!-- <script>
+      $(function () {
+        $(document).scroll(function () {
+          var $home = $("#home");
+          var $nav = $(".navbar");
+          $nav.toggleClass("scrolled", $(this).scrollTop() > $home.height())
+        });
+      });
+
+      function initMap() {
+        // The location of Uluru
+        var uluru = {
+          lat: 46.574345,
+          lng: -120.541489
+        };
+        // The map, centered at Uluru
+        var map = new google.maps.Map(
+          document.getElementById('map'), {
+            zoom: 15,
+            center: uluru
+          });
+        // The marker, positioned at Uluru
+        var marker = new google.maps.Marker({
+          position: uluru,
+          map: map
+        });
+      }
+    </script> -->
 
     <script src="scripts/main.js" type="text/javascript"></script>
     <!-- For google maps -->
