--- a/index.html
+++ b/index.html
@@ -105,8 +105,10 @@
 
     <div class="container mb-5" id="contact">
       <div class="row">
-        <div class="col-lg-6 mb-3 mb-m-0" id="map">
-
+        <div class="col-lg-6 mb-3 mb-m-0">
+          <iframe id="map" frameborder="0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDbdFH5P1o-xEDKgS0GlDSouAao5GlXzNo
+    &q=2400+Racquet+Ln,Yakima+WA" allowfullscreen>
+          </iframe>
         </div>
         <div class="col-lg-6">
           <div class="alert alert-success alert-dismissible fade show d-none" role="alert" id="email-sent">
