--- a/products.html
+++ b/products.html
@@ -63,44 +63,60 @@
         </div>
         <div class="col-lg-8 col-12 bbl">
           <div class="row">
-            <a href="https://atlona.com/" class="col-lg-2 col-4 my-3" target="_blank"><img src="images/atlona_logo.png" alt="" class="img-fluid"></a>
-            <a href="https://www.barco.com/en/" class="col-lg-2 col-4 my-3" target="_blank"><img src="images/barco_logo.png" alt="" class="img-fluid"></a>
-            <a href="https://www.definitivetechnology.com/" class="col-lg-2 col-4 my-3" target="_blank"><img src="images/Definitive_Technology_logo.png" alt=""
-                class="img-fluid"></a>
-            <a href="https://usa.denon.com/en-us" class="col-lg-2 col-4 my-3" target="_blank"><img src="images/Denon_logo.svg.png" alt="" class="img-fluid"></a>
-            <a href="https://displaytechnologies.co.uk/" class="col-lg-2 col-4 my-3" target="_blank"><img src="images/Display-Technologies-Logo.png" alt=""
-                class="img-fluid pt-3"></a>
-            <a href="http://www.dynamat.com/architectural-home/" class="col-lg-2 col-4 my-3" target="_blank"><img src="images/dynamat_11.08_2jpg.jpg" alt=""
-                class="img-fluid"></a>
+            <a href="https://atlona.com/" class="col-lg-2 col-4 my-3" target="_blank"><img src="images/atlona_logo.png"
+                alt="" class="img-fluid"></a>
+            <a href="https://www.barco.com/en/" class="col-lg-2 col-4 my-3" target="_blank"><img
+                src="images/barco_logo.png" alt="" class="img-fluid"></a>
+            <a href="https://www.definitivetechnology.com/" class="col-lg-2 col-4 my-3" target="_blank"><img
+                src="images/Definitive_Technology_logo.png" alt="" class="img-fluid"></a>
+            <a href="https://usa.denon.com/en-us" class="col-lg-2 col-4 my-3" target="_blank"><img
+                src="images/Denon_logo.svg.png" alt="" class="img-fluid"></a>
+            <a href="https://displaytechnologies.co.uk/" class="col-lg-2 col-4 my-3" target="_blank"><img
+                src="images/Display-Technologies-Logo.png" alt="" class="img-fluid pt-3"></a>
+            <a href="http://www.dynamat.com/architectural-home/" class="col-lg-2 col-4 my-3" target="_blank"><img
+                src="images/dynamat_11.08_2jpg.jpg" alt="" class="img-fluid"></a>
           </div>
           <div class="row">
-            <a href="https://www.environmentallights.com/" class="col-lg-2 col-4 my-3" target="_blank"><img src="images/logo_v2.png" alt="" class="img-fluid"></a>
-            <a href="https://epson.com/usa" class="col-lg-2 col-4 my-3" target="_blank"><img src="images/Epson-Logo.png" alt="" class="img-fluid"></a>
-            <a href="https://usa.denon.com/en-us" class="col-lg-2 col-4 my-3" target="_blank"><img src="images/HEOSlogo.png" alt="" class="img-fluid"></a>
-            <a href="https://us.kef.com/" class="col-lg-2 col-4 my-3" target="_blank"><img src="images/kef-logo.png" alt="" class="img-fluid"></a>
-            <a href="https://www.legrand.us/" class="col-lg-2 col-4 my-3" target="_blank"><img src="images/Legrand-Red-PNG.png" alt="" class="img-fluid"></a>
-            <a href="https://www.us.marantz.com/en-us" class="col-lg-2 col-4 my-3" target="_blank"><img src="images/Marantz_(logo).svg.png" alt=""
-                class="img-fluid"></a>
+            <a href="https://www.environmentallights.com/" class="col-lg-2 col-4 my-3" target="_blank"><img
+                src="images/logo_v2.png" alt="" class="img-fluid"></a>
+            <a href="https://epson.com/usa" class="col-lg-2 col-4 my-3" target="_blank"><img src="images/Epson-Logo.png"
+                alt="" class="img-fluid"></a>
+            <a href="https://usa.denon.com/en-us" class="col-lg-2 col-4 my-3" target="_blank"><img
+                src="images/HEOSlogo.png" alt="" class="img-fluid"></a>
+            <a href="https://us.kef.com/" class="col-lg-2 col-4 my-3" target="_blank"><img src="images/kef-logo.png"
+                alt="" class="img-fluid"></a>
+            <a href="https://www.legrand.us/" class="col-lg-2 col-4 my-3" target="_blank"><img
+                src="images/Legrand-Red-PNG.png" alt="" class="img-fluid"></a>
+            <a href="https://www.us.marantz.com/en-us" class="col-lg-2 col-4 my-3" target="_blank"><img
+                src="images/Marantz_(logo).svg.png" alt="" class="img-fluid"></a>
           </div>
           <div class="row">
-            <a href="https://www.meridian-audio.com/" class="col-lg-2 col-4 my-3" target="_blank"><img src="images/meridian_logo.jpg" alt="" class="img-fluid"></a>
-            <a href="https://www.legrand.us/nuvo.aspx" class="col-lg-2 col-4 my-3" target="_blank"><img src="images/Nuvo.png" alt="" class="img-fluid"></a>
-            <a href="https://www.legrand.us/onq.aspx" class="col-lg-2 col-4 my-3" target="_blank"><img src="images/On Q logo.png" alt="" class="img-fluid"></a>
-            <a href="https://www.panamorph.com/" class="col-lg-2 col-4 my-3" target="_blank"><img src="images/PanamorphLogo Website.png" alt=""
-                class="img-fluid"></a>
-            <a href="https://parasound.com/" class="col-lg-2 col-4 my-3" target="_blank"><img src="images/Parasound-General-Logo.jpg" alt=""
-                class="img-fluid"></a>
-            <a href="https://www.polkaudio.com/en-us" class="col-lg-2 col-4 my-3" target="_blank"><img src="images/Polk_Audio_logo.png" alt="" class="img-fluid"></a>
+            <a href="https://www.meridian-audio.com/" class="col-lg-2 col-4 my-3" target="_blank"><img
+                src="images/meridian_logo.jpg" alt="" class="img-fluid"></a>
+            <a href="https://www.legrand.us/nuvo.aspx" class="col-lg-2 col-4 my-3" target="_blank"><img
+                src="images/Nuvo.png" alt="" class="img-fluid"></a>
+            <a href="https://www.legrand.us/onq.aspx" class="col-lg-2 col-4 my-3" target="_blank"><img
+                src="images/On Q logo.png" alt="" class="img-fluid"></a>
+            <a href="https://www.panamorph.com/" class="col-lg-2 col-4 my-3" target="_blank"><img
+                src="images/PanamorphLogo Website.png" alt="" class="img-fluid"></a>
+            <a href="https://parasound.com/" class="col-lg-2 col-4 my-3" target="_blank"><img
+                src="images/Parasound-General-Logo.jpg" alt="" class="img-fluid"></a>
+            <a href="https://www.polkaudio.com/en-us" class="col-lg-2 col-4 my-3" target="_blank"><img
+                src="images/Polk_Audio_logo.png" alt="" class="img-fluid"></a>
           </div>
           <div class="row">
-            <a href="http://qmotionshades.com/" class="col-lg-2 col-4 my-3" target="_blank"><img src="images/qmotion-logo.png" alt="" class="img-fluid"></a>
-            <a href="https://rayva.com/" class="col-lg-2 col-4 my-3" target="_blank"><img src="images/rayvalogo-footer.png" alt="" class="img-fluid"></a>
-            <a href="http://www.seura.com/" class="col-lg-2 col-4 my-3" target="_blank"><img src="images/Logos_Seura.png" alt="" class="img-fluid"></a>
-            <a href="http://www.vantagecontrols.com/" class="col-lg-2 col-4 my-3" target="_blank"><img src="images/vantage-logo.png" alt="" class="img-fluid"></a>
-            <a href="http://www.waclighting.com/" class="col-lg-2 col-4 my-3" target="_blank"><img src="images/wac-logo-1024x237.png" alt=""
-                class="img-fluid pt-3"></a>
-            <a href="https://www.wilsonelectronics.com/" class="col-lg-2 col-4 my-3" target="_blank"><img src="images/WilsonPro-Logo_Black_RGB.png" alt=""
-                class="img-fluid"></a>
+            <a href="http://qmotionshades.com/" class="col-lg-2 col-4 my-3" target="_blank"><img
+                src="images/qmotion-logo.png" alt="" class="img-fluid"></a>
+            <a href="https://rayva.com/" class="col-lg-2 col-4 my-3" target="_blank"><img
+                src="images/rayvalogo-footer.png" alt="" class="img-fluid"></a>
+            <a href="http://www.seura.com/" class="col-lg-2 col-4 my-3" target="_blank"><img
+                src="images/Logos_Seura.png" alt="" class="img-fluid"></a>
+            <a href="http://www.vantagecontrols.com/" class="col-lg-2 col-4 my-3" target="_blank"><img
+                src="images/vantage-logo.png" alt="" class="img-fluid"></a>
+            <a href="http://www.waclighting.com/" class="col-lg-2 col-4 my-3" target="_blank"><img
+                src="images/wac-logo-1024x237.png" alt="" class="img-fluid pt-3"></a>
+            <a href="https://www.wilsonelectronics.com/" class="col-lg-2 col-4 my-3" target="_blank"><img
+                src="images/WilsonPro-Logo_Black_RGB.png" alt="" class="img-fluid"></a>
           </div>
         </div>
       </div>
